--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <label>Username: </label><input type="text" id="input1" placeholder="enter username"><br>
     <label>Password: </label><input type="password" id="input2" placeholder="enter password (min 5)"><br>
     <div id="btndiv">
-    <button type="submit" id="btn" onmouseover="game()" onclick="alert('Thanks!! Be Deciplined always 😂😂')"> Submit</button>
+    <button type="submit" id="btn" onmouseover="game()" onclick="alert('Thanks!! Be Disciplined; always 😂😂')"> Submit</button>
 </div>
 </div>
 </div>
